--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   dio: ^5.1.1
   envied: ^0.3.0
+  fluttertoast: ^8.2.1
 
 dev_dependencies:
   flutter_test:
