--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   dio: ^5.1.1
   envied: ^0.3.0
   fluttertoast: ^8.2.1
+  flutter_holo_date_picker: ^1.1.0
 
 dev_dependencies:
   flutter_test:
