--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   fluttertoast: ^8.2.1
   flutter_holo_date_picker: ^1.1.0
   flutter_slidable: ^3.0.0
+  shared_preferences: ^2.1.2
 
 dev_dependencies:
   flutter_test:
