--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_holo_date_picker: ^1.1.0
   flutter_slidable: ^3.0.0
   shared_preferences: ^2.1.2
+  qr_flutter: ^4.1.0
 
 dev_dependencies:
   flutter_test:
