--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_slidable: ^3.0.0
   shared_preferences: ^2.1.2
   qr_flutter: ^4.1.0
+  mobile_scanner: ^3.2.0
 
 dev_dependencies:
   flutter_test:
