更新图标和应用名称

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.online_payment_app">
    <application
-        android:label="online_payment_app"
+        android:label="快捷支付"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
